@@ -109,7 +109,6 @@ Group                      nogroup
 {SSL}  TLSRequired              off
 {SSL}  TLSLog                   /var/log/proftpd/ftp_ssl.log
 {SSL}  TLSProtocol              TLSv1
-{SSL}  TLSCipherSuite           ALL:!aNULL:!ADH:!eNULL:!LOW:!EXP:RC4+RSA:+HIGH:+MEDIUM
 {SSL}  TLSOptions               {TLSOPTIONS}
 {SSL}  TLSRSACertificateFile    {CONF_DIR}/{CERTIFICATE}.pem
 {SSL}  TLSRSACertificateKeyFile {CONF_DIR}/{CERTIFICATE}.pem
